# logaddexp-rs

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: release.yml  rust.yml
benches/: logaddexp.rs
src/: lib.rs  simd.rs
