[package]
name = "logaddexp"
version = "0.1.0"
author = "Erik Brinkman <erik.brinkman@gmail.com>"
edition = "2021"
description = "stable implementations of logaddexp and logsumexp"
repository = "https://github.com/erikbrinkman/logaddexp-rs"
license = "MIT"
keywords = [ "logaddexp", "logsumexp" ]

[dependencies]
num-traits = "0.2"
